# mcp-run-isolated-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  default_srt_settings.json  pyproject.toml
.github/actions/setup_python_environment/: action.yaml
.github/workflows/: publish.yml  pytest.yml  ruff_format.yml  ruff_linter.yml  ty.yml
.intelij/: Run CLI.run.xml  Run MCP server.run.xml  Run Tests.run.xml
.intellij/: Run main file.run.xml
src/TEMP_NAME/: main.py
src/TEMP_NAME/constants/: TEMP.py
src/TEMP_NAME/misc/: logger.py
src/mcp-run-isolated-python/data_structures/: TEMP.py  __base__.py
src/mcp_run_isolated_python/: cli.py  code_executor.py  context_manager.py  mcp_server.py  run_python_code.py
src/mcp_run_isolated_python/data_structures/: __base__.py
src/mcp_run_isolated_python/log/: logger.py
src/mcp_run_isolated_python/misc/: logger.py
src/mcp_run_isolated_python/utils/: logger.py  mcp_context.py  otel.py  settings.py
tests/: conftest.py
tests/integration/: README.md
tests/unit/: README.md  test_TEMPLATE.py  test_run_python_code.py
tests/unit/code_executor/: test_failure.py  test_success.py
