[project]
name = "mcp_run_isolated_python"
version = "0.0.0"
description = "WIP and TODO :)"     # todo: description
authors = [{ name = "Daniel J" }]
license = { file = "LICENCE" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.12.5",
    "whenever>=0.9.5",
    "rich>=14.3.2",
    "typer>=0.21.1",
    "fastmcp>=3.0.0b1",
    "opentelemetry-api>=1.39.1",
    "structlog>=25.5.0",
    "filetype>=1.2.0",
]

[dependency-groups]
dev = [
    # dev tools
    "ruff>=0.11.10",
    "prek>=0.3.1",
    "ty>=0.0.15",
    # testing
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Repository = "https://github.com/Kigstn/mcp-run-isolated-python"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
flake8-annotations.suppress-none-returning = true
extend-safe-fixes = ["E", "F401"]
extend-select = [
    "I", # Imports are sorted properly           -> https://docs.astral.sh/ruff/rules/#isort-i
    "ASYNC", # Asnyc code smells                     -> https://docs.astral.sh/ruff/rules/#flake8-async-async
    "N", # Verfiy var naming according to pep8   -> https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "S", # Insecure code                         -> https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "B", # Buggy code                            -> https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "A", # Buildin var shadowing                 -> https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "SIM", # Code can be simplified                -> https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PTH", # Use pathlib not os.path               -> https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "FAST", # FastApi code smells                   -> https://docs.astral.sh/ruff/rules/#fastapi-fast
    "T20", # Print statements in code              -> https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "RUF", # Various rules from ruff               -> https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "ANN001", # Missing type annotations              -> https://docs.astral.sh/ruff/rules/missing-type-function-argument/
    "ANN2", # Missing return type annotations       -> https://docs.astral.sh/ruff/rules/missing-type-function-argument/
]
extend-ignore = [
    "F403",
    "B023",
    "S105",
    "B904",
    "RET504",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF029",
]
preview = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/test_*.py" = ["S101"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/explanation/goodpractices.html
addopts = ["--import-mode=importlib"]
testpaths = ["./tests"]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
